# WebB5

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml  index.html  style.css  submit-recepie.html  submit-recipe.html
assignments/: 2.md
aufg/: 1.md
backend/: Cargo.toml
backend/migrations/: 0_initial.sql  1_bookmarks.sql
backend/src/: main.rs  models.rs
backend/src/routes/: auth.rs  bookmark.rs  comment.rs  file_upload.rs  mod.rs  recipes.rs
frontend/: app.config.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/components/: RecipeBookmarkIcon.vue  RecipeBox.vue  RecipeCardHeaderExtra.vue  RecipeComments.vue  RecipeDetail.vue  RecipeSingleComment.vue  RecipeTags.vue  Search.vue
frontend/layouts/: custom.vue  default.vue
frontend/layouts/components/: Footer.vue  Navbar.vue
frontend/layouts/components/navbar/: Navbar.vue  NavbarCreate.vue  NavbarSearch.vue  NavbarUser.vue
frontend/pages/: bookmarked.vue  create.vue  index.vue  login.vue  page2.vue
frontend/pages/recipe/: [id].vue
frontend/pages/search/: [search].vue
frontend/pages/tag/: [tag].vue
frontend/stores/: auth.ts  lastViewed.ts  recipes.ts  tags.ts
frontend/utils/: Tag.ts  http.ts  recipe_upload.ts
public/: index.html  submit-recipe.html
public/css/: style-flexbox.css  style.css
src/: main.rs
