[package]
name = "webprogrammierung_group_5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
axum = { version = "0.6.8", features = ["json", "macros"] }
tower-http = { version = "0.4", features = ["full"] }
tokio = { version = "1.25", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.14"

